<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:layout_centerInParent="true">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chbxLED"
            android:layout_toLeftOf="@+id/chbxVibrate"
            android:layout_marginRight="11dp"
            android:text="@string/led_light"
            android:textSize="14sp"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chbxVibrate"
            android:layout_centerInParent="true"
            android:text="@string/vibrate"
            android:textSize="14sp"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chbxSound"
            android:layout_toRightOf="@id/chbxVibrate"
            android:layout_marginLeft="10dp"
            android:text="@string/sound"
            android:textSize="14sp"/>
</RelativeLayout>