<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/firstRow">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chbxLED"
            android:layout_toLeftOf="@+id/chbxVibrate"
            android:layout_marginRight="11dp"
            android:text="@string/led_light"
            android:textSize="14sp"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chbxVibrate"
            android:layout_centerHorizontal="true"
            android:text="@string/vibrate"
            android:textSize="14sp"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chbxSound"
            android:layout_toRightOf="@id/chbxVibrate"
            android:layout_marginLeft="10dp"
            android:text="@string/sound"
            android:textSize="14sp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="6dp"
            android:background="@color/LightGrey"
            android:layout_below="@id/chbxVibrate"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"/>
    </RelativeLayout>
</RelativeLayout>