<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_margin="10dp">
    <RelativeLayout
        android:id="@+id/notificationTypes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp">
        <TextView
            android:id="@+id/notificationAlert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="Notification Alert Type"
            android:textSize="18sp"
            android:layout_marginBottom="14dp"/>
        <CheckBox
            android:id="@+id/chbxLED"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/notificationAlert"
            android:layout_toLeftOf="@+id/chbxVibrate"
            android:layout_marginRight="11dp"
            android:text="@string/led_light"
            android:textSize="@dimen/alert_text_size"/>
        <CheckBox
            android:id="@+id/chbxVibrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/notificationAlert"
            android:layout_centerInParent="true"
            android:text="@string/vibrate"
            android:textSize="@dimen/alert_text_size"/>
        <CheckBox
            android:id="@+id/chbxSound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/notificationAlert"
            android:layout_toRightOf="@id/chbxVibrate"
            android:layout_marginLeft="10dp"
            android:text="@string/sound"
            android:textSize="@dimen/alert_text_size"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/silentMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/notificationTypes"
        android:layout_margin="12dp">
        <View
            android:id="@+id/lineSilent"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/LightGrey"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="6dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lineSilent"
            android:id="@+id/txtSilentMode"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:text="@string/vibrate_sound_on_silent"
            android:gravity="center"
            android:textSize="@dimen/alert_text_size"/>
        <Switch
            android:id="@+id/toggleSilentMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtSilentMode"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/repeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/silentMode"
        android:layout_margin="12dp">
        <View
            android:id="@+id/lineRepeat"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/LightGrey"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="6dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lineRepeat"
            android:id="@+id/txtRepeat"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:text="@string/repeat_vibrate_sound"
            android:gravity="center"
            android:textSize="@dimen/alert_text_size"/>
        <Switch
            android:id="@+id/toggleRepeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtRepeat"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/notificationFrequency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/repeat"
        android:padding="8dp">
        <View
            android:id="@+id/lineNotif"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/LightGrey"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="6dp"
            />
        <TextView
            android:id="@+id/txtNotificationFrequency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lineNotif"
            android:text="@string/vibrate_sound_frequency"
            android:textSize="@dimen/alert_text_size"
            android:layout_centerHorizontal="true"
            android:gravity="center"/>
        <NumberPicker
            android:id="@+id/alertNumberPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtNotificationFrequency"
            android:gravity="center"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</RelativeLayout>